chore: add husky pre-commit hook for format, lint and typecheck

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@vitejs/plugin-react": "5.1.1",
     "autoprefixer": "10.4.22",
     "babel-plugin-react-compiler": "^1.0.0",
+    "husky": "^9.1.7",
     "oxfmt": "0.14.0",
     "oxlint": "1.29.0",
     "postcss": "8.5.6",
